--- a/src/main/webapp/teste.xhtml
+++ b/src/main/webapp/teste.xhtml
@@ -11,9 +11,17 @@
 </h:head>
 <h:body>
 	<h:form>
-		<p:outputLabel value="#{agenteMB.nome}"></p:outputLabel><br />
-		<p:outputLabel value="#{agenteMB.id}"></p:outputLabel><br />
-		<p:outputLabel value="#{agenteMB.descricao}"></p:outputLabel><br />
+	<!-- Id:
+	<p:outputLabel value="#{agenteMB.agente.idAgente}"></p:outputLabel><br />
+	Nome: 
+		<p:outputLabel value="#{agenteMB.agente.nome}"></p:outputLabel><br />
+	Data de contratação: 	
+		<p:outputLabel value="#{agenteMB.agente.dtContratacao}" /><br />
+	Tempo de serviço: 
+		<p:outputLabel value="#{agenteMB.agente.tempoServico}"></p:outputLabel><br />
+		 -->
+		 Adicionado!<br />
+		<p:outputLabel value="#{proprietarioMB.proprietario.nome}"></p:outputLabel><br />
 	</h:form>
 </h:body>
 </html>
